[package]
name = "epi_judge_cpp"
version = "0.1.0"
edition = "2021"
# links = "memory"

[lib]
name = "epi_judge_cpp"
crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.2"
pkg-config = "0.3.16"

# [build]
# rustflags = ["-C", "link-args=-Wl,-undefined,dynamic_lookup"]
# rustflags = ["-C", "link-args=-Wl,-undefined,dynamic_lookup"]
