[package]
name = "epi_judge_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "epi_judge_python"
crate-type = ["cdylib"]

[dependencies]
num-derive = "0.4.1"
num-traits = "0.2.17"
pyo3 = "0.19.0"
regex = "1.10.3"
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.3"
